Refatoração: Removendo avisos de depreciação no Java e melhorando CsvUtil